Revision history for {{$dist->name}}

{{$NEXT}}
  - use DynaLoader for symbol resolution instead of FFI::Raw
    thus remove dep on FFI::Raw

0.02      2014-10-26 13:18:14 -0400
  - first release to CPAN

0.01      2014-10-26 11:34:58 -0400
  - initial version