@@ -10,6 +10,7 @@ install:
   - cpanm -n FFI::Raw
 
 perl:
+  - "5.8"
   - "5.10"
   - "5.12"
   - "5.14"
