@@ -2,7 +2,6 @@ package FFI::CheckLib;
 
 use strict;
 use warnings;
-use v5.10;
 use File::Spec;
 use Carp qw( croak );
 use base qw( Exporter );
@@ -100,6 +99,43 @@ A string or array of additional paths to search for libraries.
 
 A string or a list of symbol names that must be found.
 
+=head3 verify
+
+A code reference used to verify a library really is the one that you want.  It 
+should take two arguments, which is the name of the library and the full path to the
+library pathname.  It should return true if it is acceptable, and false otherwise.  
+You can use this in conjunction with L<FFI::Raw> to determine if it is going to meet
+your needs.  Example:
+
+ use FFI::CheckLib;
+ use FFI::Raw;
+ 
+ my($lib) = find_lib(
+   name => 'foo',
+   verify => sub {
+     my($name, $libpath) = @_;
+     
+     my $new = FFI::Raw->new(
+       $lib, 'foo_new',
+       FFI::Raw::ptr,
+     );
+     
+     my $delete = FFI::Raw->new(
+       $lib, 'foo_delete',
+       FFI::Raw::void,
+       FFI::Raw::ptr,
+     );
+     
+     # return true if new returns
+     # a pointer, not forgetting
+     # to free it on success.
+     my $ptr = $new->call();
+     return 0 unless $ptr;
+     $delete->call();
+     return 1;
+   },
+ );
+
 =cut
 
 sub find_lib
@@ -109,9 +145,9 @@ sub find_lib
   croak "find_lib requires lib argument" unless defined $args{lib};
 
   # make arguments be lists.
-  foreach my $arg (qw( lib libpath symbol ))
+  foreach my $arg (qw( lib libpath symbol verify ))
   {
-    next if ref $args{$arg};
+    next if ref $args{$arg} eq 'ARRAY';
     if(defined $args{$arg})
     {
       $args{$arg} = [ $args{$arg} ];
@@ -150,9 +186,17 @@ sub find_lib
     # finding .dlls from .a files that may
     # be worth adopting.
     
+    midloop:
     foreach my $lib (@maybe)
     {
-      next unless delete $missing{$lib->[0]};
+      next unless $missing{$lib->[0]};
+      
+      foreach my $verify (@{ $args{verify} })
+      {
+        next midloop unless $verify->(@$lib);
+      }
+      
+      delete $missing{$lib->[0]};
       
       foreach my $symbol (keys %symbols)
       {
