@@ -1,2 +1,3 @@
 Module::Build
 Test::More
+autodie
