@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - use DynaLoader for symbol resolution instead of FFI::Raw
     thus remove dep on FFI::Raw
+  - add verify option
 
 0.02      2014-10-26 13:18:14 -0400
   - first release to CPAN
